* marks an incompatible change


version 0.81, March 25, 2013
==========================

  o [prover] experimental support for SPASS >= 3.8 (with types)
  o [prover] support for Z3 4.3.*
  o [prover] fixed Coq 8.4 support for theory real.Trigonometry
  o [prover] support for CVC4
  o [prover] support for mathematica
  o [prover] support for MathSAT5
  o [logic] accept type expressions in clone substitutions
  o [whyml] support for relation chains (e.g., "e1 = e2 < e3")
  * [whyml] every exception raised in a function must be listed
    in as "raises { ... }" clause. A postcondition may be omitted
    and equals to "true" by default.
  * [whyml] if a function definition contains a "writes { ... }"
    clause, then every write effect must be listed. If a function
    definition contains a "reads { ... }" clause, then every read
    _and_ write effect must be listed.
  * [drivers] syntax rules, metas, and preludes are inherited
    through cloning. Keyword "cloned" becomes unnecessary and
    is not accepted anymore.


version 0.80, Oct 31, 2012
==========================
  * [whyml] modified syntax for mlw programs; a summary of changes is
    given in Appendix A of the manual
  o [whyml] support for type invariants and ghost code
  o [api] Ocaml interfaces for constructing program modules
  o [transformation] experimental support for induction on integers
    and on algebraic types
  o [interface] new system of warnings, that includes:
     - form "exists x, P -> Q", likely an error
     - unused bound logic variables in "forall", "exists" and "let"
  o [replayer] new option -q, for running quietly
  * [session] improved output of "why3session latex"; LaTeX macros have
    more arguments
  o [prover] support for Coq 8.4
  * [prover] dropped support for Coq 8.2
  o [prover] support for forthcoming PVS 6.0, including realizations
  o [prover] support for iProver and Zenon
  o [prover] new output scheme for Coq using type classes, to ensures
    types are inhabited