@@ -1,5 +1,7 @@
 * marks an incompatible change
 
+  * [emacs] why.el renamed to why3.el
+  * [GTK sourceview] why.lang renamed to why3.lang
 
 version 0.81, March 25, 2013
 ==========================
